--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-45.htm
@@ -9,11 +9,13 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head"> Using the Package Explorer</H1>
-<P>&nbsp;<br>
-
-<img src = ../ngibmcpy.gif border=0>
-
-</P>
+<P>&nbsp;</P>
+<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></P>
+<P><a href="tasks-47.htm">Filtering elements</a></P>
+<P><a href="tasks-2.htm">Showing and hiding elements</a></P>
+<P><a href="tasks-5102.htm">Moving folders, packages and files&nbsp;</a></P>
+<P><br>
+  <img src = ../ngibmcpy.gif border=0> </P>
 
 
 
