--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
@@ -44,15 +44,16 @@ well.</div>
 <p><a href="../concepts/concepts-3.htm">Java projects</a>
 <br><a href="../concepts/concepts-9.htm">Refactoring support</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
-<p><a href="tasks-15.htm">Creating a new Java package</a>
-<br><a href="tasks-85.htm">Copying and moving Java elements</a>
-<br><a href="tasks-77.htm">Opening a package</a>
-<br><a href="tasks-90.htm">Renaming a package</a>
-<p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
+  <p><a href="tasks-45.htm">Using the Package Explorer</a><br>
+  <a href="tasks-15.htm">Creating a new Java package</a> <br>
+    <a href="tasks-85.htm">Copying and moving Java elements</a> <br>
+    <a href="tasks-77.htm">Opening a package</a> <br>
+    <a href="tasks-90.htm">Renaming a package</a> 
+  <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
 <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
 <br><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
 <br>&nbsp;
-<p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195></div>
+<p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1028" ></div>
 
 </body>
 </html>
