updated incremental find

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
@@ -27,14 +27,22 @@
       </li>
 
       <li>
-        As you type, the editor finds the first occurrence of the text and updates the 
+        As you type, the editor finds the next occurrence of the text and updates the 
         selection after each character typed
       </li>
-    </ol>
 
-    <p class="Para">
-      You can leave the Incremental Find mode by pressing <kbd>Esc</kbd>.
-    </p>
+      <li>
+        Navigate to the next or previous match by pressing <kbd>Arrow Down</kbd> or <kbd>Arrow Up</kbd>.
+      </li>
+
+      <li>
+        Undo the last action within the Incremental Find mode by pressing <kbd>Backspace</kbd>.
+      </li>
+
+      <li>
+        You can leave the Incremental Find mode by pressing <kbd>Esc</kbd>.
+      </li>      
+    </ol>
 
     <div class="copyright">
       <a href="../hglegal2002.htm">
