--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
@@ -13,12 +13,26 @@ Using the Java editor</H1>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-7.htm">Java editor</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p>
-<a href="../tasks/tasks-57.htm">Generating accessors</a><br>
-<a href="../tasks/tasks-73.htm">Opening an editor 
-for a selected element</a><br>
-<a href="../tasks/tasks-134.htm">Suspending threads</a><br>
-<a href="../tasks/tasks-65.htm">Using content/code assist</a>&nbsp;</p>
+<p> <a href="../tasks/tasks-57.htm">Generating accessors</a><br>
+<a href="tasks-58.htm">Managing import statements</a><br>
+  <a href="tasks-62.htm">Using the local history</a><br>
+  <a href="tasks-66.htm">Formatting Java code</a><br>
+  <a href="tasks-69.htm">Viewing documentation and information</a><br>
+  <a href="tasks-171.htm">Using templates</a><br>
+  <a href="tasks-203.htm">Writing your own templates</a><br>
+  <a href="tasks-172.htm">Converting line delimiters</a><br>
+  <a href="tasks-173.htm">Finding and replacing</a><br>
+  <a href="tasks-marks.htm">Using marks</a><br>
+  <a href="tasks-delete-line.htm">Deleting lines</a><br>
+  <a href="tasks-174.htm">Changing the encoding used to show the source</a><br>
+  <a href="tasks-175.htm">Using QuickFix</a><br>
+  <a href="tasks-176.htm">Using Structured Selection</a><br>
+  <a href="tasks-177.htm">Commenting and uncommenting lines of code</a><br>
+  <a href="tasks-178.htm">Shifting lines of code left and right</a><br>
+  <a href="tasks-179.htm">Using Surround with try/catch</a><br>
+<a href="tasks-6.htm">Showing single elements or whole Java files</a><br>
+  <a href="../tasks/tasks-73.htm">Opening an editor for a selected element</a><br>
+  <a href="../tasks/tasks-65.htm">Using content/code assist</a>&nbsp;</p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p><a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
 <a href="../reference/ref-5.htm">Java editor actions</a><br>
