--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -712,7 +712,7 @@ while (Test.class.isAssignableFrom(superClass)) {
           <li class="Item">
             select from the menu bar Navigate &gt; Open Type Hierarchy or
           </li>
-          <li class="Item">press F4.</li>
+          <li class="Item">press <kbd>F4</kbd>.</li>
         </ul>
 
         <div class="Snapshot">
