--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-58.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-58.htm
@@ -15,7 +15,8 @@ The default Java editor includes several features that help you manage import st
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-7.htm">Java editor</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-59.htm">Adding required 
+<p><a href="tasks-54.htm">Using the Java editor</a><br>
+<a href="../tasks/tasks-59.htm">Adding required 
 import statements</a><br>
 <a href="../tasks/tasks-60.htm">Organizing existing 
 import statements</a><br>
