--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
@@ -29,15 +29,15 @@ alt="Related concepts" border=0></p>
     <a href="../concepts/concepts-6.htm">Java views</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="tasks-63.htm">Replacing a Java element with a local history 
+  <p><a href="tasks-54.htm">Using the Java editor</a><br>
+  <a href="tasks-63.htm">Replacing a Java element with a local history 
     edition</a><br>
     <a href="tasks-64.htm">Restoring a deleted workbench element</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"></p>
   <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-    &nbsp;</p>
-  <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
-</div>
+    &nbsp;<br>
+    <img border=0 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
+  </div>
 </body>
 </html>
