--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
@@ -14,10 +14,8 @@
     for a selected type inside a compilation unit.</div>
   <br>
   &nbsp; 
-  <blockquote> 
     <li class="para"> Select a reference to a type in your Java code, and do one 
       of the following:</li>
-  </blockquote>
   <ol start=1 type=1>
     <ul type=circle>
       <li class="MsoNormal"> Select <b>Source ></b>&nbsp;<span class=label><b>Add 
@@ -31,19 +29,18 @@
     <li class="para"> The import statement is generated and inserted as specified 
       by the import order preference.</li>
   </ol>
-  <br>
-  &nbsp; 
   <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159> 
   <p><a href="../concepts/concepts-7.htm">Java editor</a> 
   <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159> 
-  <p><a href="tasks-58.htm">Managing import statements</a> <br>
+  <p><a href="tasks-54.htm">Using the Java editor</a> <br>
+  <a href="tasks-58.htm">Managing import statements</a> <br>
     <a href="tasks-60.htm">Organizing existing import statements</a> 
     <br>
     <a href="tasks-61.htm">Setting the order of import statements</a> 
   <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159> 
   <p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a> <br>
     &nbsp; 
-  <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195> 
+  <p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1028" > 
 </div>
 </body>
 </html>
