--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
@@ -20,7 +20,15 @@ class=label><b>Show Source of Selected Element Only</b></span> button in the wor
     depressed. 
   <p><b>Note:</b> this toolbar button is enabled only when a Java editor is open.</p> 
     
-  &nbsp; 
+  <p>&nbsp;</p>
+  <p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+  <p><a href="../concepts/concepts-7.htm">Java editor</a><br>
+    &nbsp;</p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-54.htm">Using the Java editor</a><br>
+  </p>
   <p><img SRC="../images/ngibmcpy.gif" border=0> 
 </div>
 </body>
