--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
@@ -48,7 +48,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
 src="../images/ngrelr.gif" alt="Related reference"></p>
   <p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
+    <img border=0 ="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
