--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
@@ -49,7 +49,7 @@ src="../images/ngrelr.gif" alt="Related reference"></p>
   <p><a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
     &nbsp;</p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
