--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -97,9 +97,9 @@ button in the view toolbar.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">Click the&nbsp;<span CLASS="Label">Lock View</span> button
-in the method pane (the bottom pane) in the Hierarchy view, then select
-the runTest() method in the method pane.</div>
+<div CLASS="Para">Click the&nbsp;<span CLASS="Label">Lock View and Show Members in Hierarchy</span> button
+in the toolbar of the member pane, then select
+the runTest() method in the member pane.</div>
 
 <div CLASS="Para">The view will now show all the types implementing runTest().</div>
 
@@ -188,7 +188,7 @@ in the Java editor.&nbsp;
 you can have more than one type hierarchy in your workbench and switch
 between them as needed.&nbsp;
 <br>You can also configure whether a new perspective opens in a new window
-under Window > Preferences > Workbench > Perspectives.</div>
+under <span class="Label">Window &gt; Preferences &gt; Workbench &gt; Perspectives</span>.</div>
 </td>
 </tr>
 </table>
