--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -114,7 +114,7 @@ the runTest() method in the member pane.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Hierarchy view, click the&nbsp;<span CLASS="Label">Show
-the Supertype Hierarchy</span> button. Then in the list pane, select countTestCases()
+the Supertype Hierarchy</span> button. Then in the member pane, select countTestCases()
 to display the places where this method is overridden.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-33.gif" alt="" height=254 width=269></div>
