--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-66.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-66.htm
@@ -21,15 +21,20 @@ alt="Related concepts" border=0></p>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
 <a href="../concepts/concepts-7.htm">Java editor</a></p>
 
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-54.htm">Using the Java editor</a><br>
+    <a href="tasks-68.htm">Setting code formatting preferences</a><br>
+    <a href="tasks-67.htm">Formatting files or portions of code</a><br>
+    <a href="tasks-65.htm">Using content/code assist</a></p>
 
-<p><a href="tasks-68.htm">Setting code formatting preferences</a><br>
-<a href="tasks-67.htm">Formatting files or portions of code</a><br>
-<a href="tasks-65.htm">Using content/code assist</a></p>
-
-<p><br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+<p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-17.htm">Code 
+    Formatter preferences</a></p>
+  <p></p>
+  <p><br>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 
 </div>
 
