--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
@@ -33,10 +33,11 @@ alt="Related concepts" border=0></p>
     <a href="../concepts/concepts-7.htm">Java editor</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="../images/ngrelt.gif" alt="Related tasks"></p>
-  <p><a href="tasks-66.htm">Formatting Java code</a><br>
+  <p><a href="tasks-54.htm">Using the Java editor</a><br>
+  <a href="tasks-66.htm">Formatting Java code</a><br>
     <a href="tasks-68.htm">Setting code formatting preferences</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
