--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
@@ -31,8 +31,13 @@ alt="Related concepts" border=0></p>
 src="../images/ngrelt.gif" alt="Related tasks"></p>
   <p><a href="tasks-66.htm">Formatting Java code</a><br>
     <a href="tasks-67.htm">Formatting files or portions of code</a></p>
-  <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+  <p>&nbsp;<img border=0 width=159 height=27 id="_x0000_i1027"
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-17.htm">Code 
+    Formatter preferences</a></p>
+  <p></p>
+  <p><br>
+    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
