--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
@@ -66,7 +66,23 @@
   </li>
 </ul>
 <div class="copyright">
-<p><a href="../hglegal2002.htm"> <img src="../images/ngibmcpy2002.gif"
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+  <p><a href="../concepts/concepts-7.htm">Java editor</a></p>
+  <p><a href="../concepts/ctemplates.htm">Templates</a><br>
+    &nbsp;</p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-54.htm">Using the Java editor</a><br>
+  <a href="tasks-203.htm">Writing your own templates</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
+src="../images/ngrelr.gif" alt="Related reference"></p>
+  <p><a href="../reference/ref-preferences-templates.htm">Templates 
+    preference page</a></p>
+  <p></p>
+  <p><br>
+  </p>
+  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
           alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
     </a> </p>
 </div>
