--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-173.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-173.htm
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
 <html>
   <head>
     <title>Finding and replacing</title>
@@ -12,12 +10,20 @@
   <body>
     <h1 class="Head">Finding and replacing</h1>
 
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
+    
+<div class="copyright">
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-54.htm">Using the Java editor</a><br>
+<a href="tasks-181.htm">Using the Find/Replace dialog</a><br>
+    <a href="tasks-182.htm">Using Incremental Find</a><br>
+    <a href="tasks-187.htm">Finding Next or Previous Match</a><br>
+    <br>
+  </p>
+  <p><a href="../hglegal2002.htm"> <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
+    </a> </p>
+</div>
 
   </body>
 </html>
