--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
@@ -1,55 +1,39 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
 <html>
-  <head>
-    <title>Using Incremental Find</title>
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-    <meta http-equiv="Content-Style-Type" content="text/css" />
-  </head>
-
-  <body>
-    <h1 class="Head">Using Incremental Find</h1>
-
-    <p class="Para">
-      To use Incremental Find:
-    </p>
-
-    <ol>
-      <li>
-        In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>J</kbd> or select
-        <span class="Label">Edit &gt; Incremental Find</span> from the menu bar
-      </li>
-
-      <li>
-        The workbench status line displays Incremental Find: information which is 
-        updated as you type. The editor is now in the Incremental Find mode.
-      </li>
-
-      <li>
-        As you type, the editor finds the next occurrence of the text and updates the 
-        selection after each character typed
-      </li>
-
-      <li>
-        Navigate to the next or previous match by pressing <kbd>Arrow Down</kbd> or <kbd>Arrow Up</kbd>.
-      </li>
-
-      <li>
-        Undo the last action within the Incremental Find mode by pressing <kbd>Backspace</kbd>.
-      </li>
-
-      <li>
-        You can leave the Incremental Find mode by pressing <kbd>Esc</kbd>.
-      </li>      
-    </ol>
-
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
-
-  </body>
+<head>
+<title>Using Incremental Find</title>
+<link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<meta http-equiv="Content-Style-Type" content="text/css" />
+</head>
+<body bgcolor="#FFFFFF">
+<h1 class="Head">Using Incremental Find</h1>
+<p class="Para"> To use Incremental Find: </p>
+<ol>
+  <li> In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>J</kbd> or select 
+    <span class="Label">Edit &gt; Incremental Find</span> from the menu bar </li>
+  <li> The workbench status line displays Incremental Find: information which 
+    is updated as you type. The editor is now in the Incremental Find mode. </li>
+  <li> As you type, the editor finds the next occurrence of the text and updates 
+    the selection after each character typed </li>
+  <li> Navigate to the next or previous match by pressing <kbd>Arrow Down</kbd> 
+    or <kbd>Arrow Up</kbd>. </li>
+  <li> Undo the last action within the Incremental Find mode by pressing <kbd>Backspace</kbd>. 
+  </li>
+  <li> You can leave the Incremental Find mode by pressing <kbd>Esc</kbd>. </li>
+</ol>
+<div class="copyright">
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+  <p><a href="../concepts/concepts-7.htm">Java editor</a><br>
+    &nbsp;</p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-54.htm">Using the Java editor</a></p>
+  <p><a href="tasks-173.htm">Finding and Replacing</a></p>
+  <p><a href="tasks-187.htm">Finding Next or Previous Match</a></p>
+  <p><a href="../hglegal2002.htm"> <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
+    </a> </p>
+</div>
+</body>
 </html>
