--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-187.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-187.htm
@@ -1,51 +1,35 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
+<!doctype html public "-//W3C//DTD HTML 4.01 Transitional transitional//en">
 <html>
-  <head>
-    <title>Finding Next or Previous Match</title>
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-    <meta http-equiv="Content-Style-Type" content="text/css" />
-  </head>
-
-  <body>
-    <h1 class="Head">Finding Next or Previous Match</h1>
-
-    <p class="Para">
-      To find the next match:
-    </p>
-
-    <ol>
-      <li>
-        In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>K</kbd> or select
-        <span class="Label">Edit &gt; Find Next</span> from the menu bar.
-      </li>
-      <li>
-        The next occurrence of the text selected in the editor will be found.
-      </li>
-    </ol>
-
-    <p class="Para">
-      To find the previous match:
-    </p>
-
-    <ol>
-      <li>
-        In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>K</kbd> or select
-        <span class="Label">Edit &gt; Find Previous</span> from the menu bar.
-      </li>
-
-      <li>
-        The next occurrence of the text selected in the editor will be found.
-      </li>
-    </ol>
-
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
-
-  </body>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<title>Finding Next or Previous Match</title>
+<body bgcolor="#FFFFFF">
+<h1 class="Head">Finding Next or Previous Match</h1>
+<p class="Para"> To find the next match: </p>
+<ol>
+  <li> In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>K</kbd> or select 
+    <span class="Label">Edit &gt; Find Next</span> from the menu bar. </li>
+  <li> The next occurrence of the text selected in the editor will be found. </li>
+</ol>
+<p class="Para"> To find the previous match: </p>
+<ol>
+  <li> In the text (or Java) editor, press <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>K</kbd> 
+    or select <span class="Label">Edit &gt; Find Previous</span> from the menu 
+    bar. </li>
+  <li> The next occurrence of the text selected in the editor will be found. </li>
+</ol>
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+<p><a href="../concepts/concepts-7.htm">Java editor</a><br>
+</p>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+<p><a href="tasks-54.htm">Using the Java editor</a></p>
+<p><a href="tasks-173.htm">Finding and Replacing</a></p>
+<p><a href="tasks-182.htm">Using Incremental Find</a></p>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border /> 
+  </a> </p>
+</body>
 </html>
