--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-203.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-203.htm
@@ -45,7 +45,8 @@
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p> <a href="../concepts/ctemplates.htm">Templates</a> </p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p> <a href="tasks-171.htm">Using templates</a></p>
+<p> <a href="tasks-54.htm">Using the Java editor</a><br>
+<a href="tasks-171.htm">Using templates</a></p>
 <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="../images/ngrelr.gif" alt="Related reference"></p>
 <p><a href="../reference/ref-preferences-templates.htm">Template preference page</a></p>
