--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
@@ -1,96 +1,77 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
 <html>
-  <head>
-    <title>Using the Find/Replace dialog</title>
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-    <meta http-equiv="Content-Style-Type" content="text/css" />
-  </head>
-
-  <body>
-    <h1 class="Head">Using the Find/Replace dialog</h1>
-
-    <p class="Para">
-      To open the Find / Replace dialog:
-    </p>
-
-    <ol>
-      <li>Optionally, select some text in a text (or Java) editor </li>
-      <li>Press <kbd>Ctrl</kbd>+<kbd>F</kbd> or</li>
-      <li>From the menu bar, select <span class="Label">Edit &gt; Find / Replace</span></li>
-    </ol>
-
-    <p class="Para">
-      To use the Find / Replace dialog:
-    </p>
-
-    <ol>
-      <li>In the <span class="Label">Find</span> field, enter the text you want to replace</li>
-      <li>Optionally, in the <span class="Label">Replace With</span> field, enter the next text</li>
-      <li>Using the radio buttons in the <span class="Label">Direction</span> group, select the direction 
-        of finding occurrences (relative the current caret position)</li>
-      <li>
-        In the <span class="Label">Scope</span> radio button group: 
-
-        <ul>
-          <li>Select the <span class="Label">Selected Lines</span> button if you want to limit find / 
-            replace to the lines you selected when opening the dialog</li>
-          <li>Select the <span class="Label">All</span> button otherwise</li>
-        </ul>
-      </li>
-
-      <li>
-        In the <span class="Label">Options</span> group: 
-
-        <ul>
-          <li>
-            Select the <span class="Label">Case Sensitive</span> checkbox if you want
-            finding to be case sensitive.
-          </li>
-
-          <li>
-            Select the <span class="Label">Whole Word</span> checkbox if you want to find / replace 
-            only those occurrences in which the text you entered in the <span class="Label">Find</span> 
-            field is a whole word
-          </li>
-
-          <li>Select the <span class="Label">Wrap Search</span> checkbox if you want the dialog to continue
-            from the top of the file once the bottom is reached (if you find / replace 
-            in Selected Lines only, then this option applies to those lines only)
-          </li>
-
-          <li>Select the <span class="Label">Incremental</span> checkbox if you want to perform incremental 
-            find (e.g. the dialog will find matching occurrences while you are typing 
-            in the Find field)
-          </li>
-        </ul>
-      </li>
-
-      <li>Press: 
-        <ul>
-          <li><span class="Label">Find</span> if you want to find the next matching occurrence</li>
-          <li><span class="Label">Replace</span>, if you want to replace the currently selected occurrence 
-            with the new text</li>
-          <li><span class="Label">Replace / Find</span>, if you want to replace the currently selected 
-            occurrence with the new text and find the next matching occurrence</li>
-          <li><span class="Label">Replace All</span>, if you want to replace all matching occurrences 
-            with the new text
-          </li>
-        </ul>
-      </li>
-
-      <li>
-        Press <span class="Label">Close</span>.
-      </li>
-    </ol>
-
-    <div class="copyright">
-      <a href="../hglegal2002.htm">
-        <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
-      </a>
-    </div>
-
-  </body>
+<head>
+<title>Using the Find/Replace dialog</title>
+<link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<meta http-equiv="Content-Style-Type" content="text/css" />
+</head>
+<body bgcolor="#FFFFFF">
+<h1 class="Head">Using the Find/Replace dialog</h1>
+<p class="Para"> To open the Find / Replace dialog: </p>
+<ol>
+  <li>Optionally, select some text in a text (or Java) editor </li>
+  <li>Press <kbd>Ctrl</kbd>+<kbd>F</kbd> or</li>
+  <li>From the menu bar, select <span class="Label">Edit &gt; Find / Replace</span></li>
+</ol>
+<p class="Para"> To use the Find / Replace dialog: </p>
+<ol>
+  <li>In the <span class="Label">Find</span> field, enter the text you want to 
+    replace</li>
+  <li>Optionally, in the <span class="Label">Replace With</span> field, enter 
+    the next text</li>
+  <li>Using the radio buttons in the <span class="Label">Direction</span> group, 
+    select the direction of finding occurrences (relative the current caret position)</li>
+  <li> In the <span class="Label">Scope</span> radio button group: 
+    <ul>
+      <li>Select the <span class="Label">Selected Lines</span> button if you want 
+        to limit find / replace to the lines you selected when opening the dialog</li>
+      <li>Select the <span class="Label">All</span> button otherwise</li>
+    </ul>
+  </li>
+  <li> In the <span class="Label">Options</span> group: 
+    <ul>
+      <li> Select the <span class="Label">Case Sensitive</span> checkbox if you 
+        want finding to be case sensitive. </li>
+      <li> Select the <span class="Label">Whole Word</span> checkbox if you want 
+        to find / replace only those occurrences in which the text you entered 
+        in the <span class="Label">Find</span> field is a whole word </li>
+      <li>Select the <span class="Label">Wrap Search</span> checkbox if you want 
+        the dialog to continue from the top of the file once the bottom is reached 
+        (if you find / replace in Selected Lines only, then this option applies 
+        to those lines only) </li>
+      <li>Select the <span class="Label">Incremental</span> checkbox if you want 
+        to perform incremental find (e.g. the dialog will find matching occurrences 
+        while you are typing in the Find field) </li>
+    </ul>
+  </li>
+  <li>Press: 
+    <ul>
+      <li><span class="Label">Find</span> if you want to find the next matching 
+        occurrence</li>
+      <li><span class="Label">Replace</span>, if you want to replace the currently 
+        selected occurrence with the new text</li>
+      <li><span class="Label">Replace / Find</span>, if you want to replace the 
+        currently selected occurrence with the new text and find the next matching 
+        occurrence</li>
+      <li><span class="Label">Replace All</span>, if you want to replace all matching 
+        occurrences with the new text </li>
+    </ul>
+  </li>
+  <li> Press <span class="Label">Close</span>. </li>
+</ol>
+<div class="copyright"> 
+  <p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+  <p><a href="../concepts/concepts-7.htm">Java editor</a><br>
+    &nbsp;</p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+  <p><a href="tasks-54.htm">Using the Java editor</a></p>
+  <p><a href="tasks-173.htm">Finding and replacing</a><br>
+  </p>
+  <p><a href="../hglegal2002.htm"> <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
+    </a> </p>
+</div>
+</body>
 </html>
