--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -13,8 +13,8 @@
 <h1 CLASS="Head">
 Moving and copying Java elements</h1>
 
-<div CLASS="Para">In this section, you will move a resource between Java
-packages.</div>
+<p class="Para">In this section, you will move a resource between Java
+packages.</p>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
 <caption><THEAD></THEAD><TBODY>
@@ -59,7 +59,7 @@ removed to reflect its new location.</div>
 <div CLASS="Para">Using the context menu is an alternative to drag and
 drop:
 <br>Select the&nbsp;<span CLASS="Filename">MyTestCase.java</span> file
-and from its context menu, select Refactor > Move. In the Move dialog,
+and from its context menu, select <span class="Label">Refactor &gt; Move</span>. In the Move dialog,
 expand the hierarchy to browse the possible new locations for the resource.
 Select the&nbsp;<span CLASS="Filename">junit.framework</span> package,
 then click&nbsp;<span CLASS="Label">OK</span>. The class is moved, and
