--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
@@ -12,15 +12,15 @@
 <h1 CLASS="Head">
 Searching the workbench</h1>
 
-<div CLASS="Para">In this section, you will search the workbench for Java
+<p class="Para">In this section, you will search the workbench for Java
 elements.
-<br>&nbsp;</div>
+</p>
 
-<div CLASS="Para">In the Search dialog, you can perform file, text or Java
-searches.&nbsp; Java searches operate on the structure of the code. With
-File Search you can search files by name and/or text content.&nbsp; Indexing
+<p class="Para">In the Search dialog, you can perform file, text or Java
+searches. Java searches operate on the structure of the code. With
+File Search you can search files by name and/or text content. Indexing
 makes Java searches faster, while searches on text content will allow you
-to find matches inside comments and strings.</div>
+to find matches inside comments and strings.</p>
 
 <div CLASS="Topic">
 <h2>
@@ -37,7 +37,7 @@ Performing a JDT search</h2>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Java perspective, click the&nbsp;<span CLASS="Label">Search</span>
-button in the workbench toolbar or use Search > Java from the menu bar.</div>
+button in the workbench toolbar or use <span class="Label">Search &gt; Java</span> from the menu bar.</div>
 </td>
 </tr>
 
@@ -135,7 +135,7 @@ to open it in an editor.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Outline view, select the fail(String) method,
-and from its context menu, select References > Workspace.</div>
+and from its context menu, select <span class="Label">References &gt; Workspace</span>.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-50.gif" alt="" height=274 width=533></div>
 </td>
@@ -149,7 +149,7 @@ From an editor</h2>
 
 <div CLASS="Para">From the Package Explorer view, open&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.
 In the editor, select the class name&nbsp;<span CLASS="Filename">TestCase</span>
-and from the context menu, select Search > References > Workspace.</div>
+and from the context menu, select <span class="Label">Search &gt; References &gt; Workspace</span>.</div>
 
 <div CLASS="Figure"><img SRC="../images/qs-52.gif" alt="" height=468 width=598>
 <div CLASS="FigureTitle">&nbsp;</div>
