--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -12,8 +12,8 @@
 <h1 CLASS="Head">
 Viewing the Type Hierarchy</h1>
 
-<div CLASS="Para">In this section, you will learn about using the Hierarchy
-view.</div>
+<p CLASS="Para">In this section, you will learn about using the Hierarchy
+view.</p>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
 <caption><THEAD></THEAD><TBODY>
