--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -12,10 +12,9 @@
 <h1 CLASS="Head">
 Renaming Java elements</h1>
 
-<div CLASS="Para">In this section, you will rename a Java element using
-refactoring.</div>
+<p CLASS="Para">In this section, you will rename a Java element using
+refactoring.</p>
 
-<br>&nbsp;
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
 <caption><THEAD></THEAD><TBODY>
 <br></TBODY></caption>
@@ -37,7 +36,7 @@ refactoring.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">From its context menu, select&nbsp;<span CLASS="Label">Refactor
-> Rename</span>.</div>
+&gt; Rename</span>.</div>
 
 <div CLASS="Para">Refactoring actions change the structure of your code
 without changing its semantic behavior.</div>
@@ -51,8 +50,7 @@ without changing its semantic behavior.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the&nbsp;<span CLASS="Label">Enter New Name</span>
-field in the Rename Compilation Unit dialog, type "<span CLASS="Filename">
-MyTestCase</span> ", then click&nbsp;<span CLASS="Label">Next</span>.</div>
+field on the Rename Compilation Unit page, type "<span CLASS="Filename">MyTestCase</span>", then click&nbsp;<span CLASS="Label">Next</span>.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-38.gif" alt="" height=331 width=608></div>
 </td>
@@ -82,7 +80,7 @@ sufficient in this case and would result in compile errors.&nbsp;</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the Refactoring preview dialog, you can scroll through
+<div CLASS="Para">On the Refactoring preview page, you can scroll through
 the various proposed changes and select or deselect changes, if necessary.</div>
 
 <div CLASS="Note">
@@ -108,8 +106,8 @@ all proposed changes.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the menu bar, select Refactor > Undo Rename TestCase.java
-to MyTestCase.java.</div>
+<div CLASS="Para">In the menu bar, select <span class="Label">Refactor &gt; Undo Rename TestCase.java
+to MyTestCase.java</span>.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-40.gif" alt="" height=235 width=437></div>
 </td>
