--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -10,11 +10,10 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">
-Identifying problems in your code</h1>
+<h1 CLASS="Head">Identifying problems in your code</h1>
 
-<div CLASS="Para">In this section, you will review the different indicators
-for identifying problems in your code.</div>
+<p class="Para">In this section, you will review the different indicators
+for identifying problems in your code.</p>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
 <caption>&nbsp;</caption>
@@ -26,7 +25,7 @@ for identifying problems in your code.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">Build problems are always displayed in the Tasks view.&nbsp;
-(At this point your list should be empty.)</div>
+(At this point the Tasks view should be empty.)</div>
 </td>
 </tr>
 
@@ -48,8 +47,7 @@ in the editor from the Package Explorer view.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">Add a syntax error by deleting the semicolon at the end
-of the first line in the file (<span CLASS="Filename"> package junit.framework;</span>
-).</div>
+of the first line in the file (<span CLASS="Filename">package junit.framework;</span>).</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-34.gif" alt="" height=108 width=288></div>
 </td>
@@ -85,7 +83,7 @@ it are recompiled.</div>
 In the Tasks view, the problems are listed</li>
 
 <li CLASS="Item">
-In the Package Explorer view, the type hierarchy or the outline view, problem
+In the Package Explorer view, the Type Hierarchy or the Outline view, problem
 ticks appear on affected Java elements and their parent elements&nbsp;</li>
 
 <li CLASS="Item">
@@ -187,7 +185,7 @@ that correction proposals are available for this problem.
 </td>
 
 <td>Set the cursor inside the marked range and choose&nbsp;<span CLASS="Label">Quick
-Fix</span> from the Edit menu bar. You can also press CTRL + 1 or left
+Fix</span> from the Edit menu bar. You can also press Ctrl+1 or left
 click the light bulb. A selection dialog appears with possible corrections.
 <br><img SRC="../images/qs-37b.gif" alt="" height=304 width=750></td>
 </tr>
@@ -214,8 +212,9 @@ line will disappear as the correction is applied.</td>
 <div CLASS="Para"><b>16.</b></div>
 </td>
 
-<td>You can enable or disable the various problem indicators under Window
-> Preferences > Java > Editor > Problem Indication</td>
+<td>You can enable or disable the various problem indicators under
+<span class="Label">Window &gt; Preferences &gt; Java &gt; Editor &gt; Problem Indication</span>
+</td>
 </tr>
 </table>
 
