--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
@@ -1,17 +1,29 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Tips &amp; Tricks</title>
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Overview</title></head><body bgcolor="#ffffff">
+<h1 class="Head">Overview</h1>This section gives you various tips which can make your live easier. The following areas are covered:<br>
+<br>
+<a href="tips-2.htm">Templates </a>
+<br>
+<a href="tips-3.htm">Type Hierarchy </a>
+<br>
+<a href="tips-5.htm">Search </a>
+<br>
+<a href="tips-6.htm">Code Assist </a>
+<br>
+<a href="tips-7.htm">Java Editor </a>
+<br>
+<a href="tips-9.htm">Java Project Classpath </a>
+<br>
+<a href="tips-10.htm">JUnit </a>
+<br>
+<a href="tips-11.htm">Miscellaneous </a>
+<br>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Tips &amp; Tricks</H1>
 
 <p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
 
-</BODY>
-</HTML>
+</body></html>
